Buzilla #271597 Added type check before getting origin values. Revised Origin value UI to input datetime more conveniently.